--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
     --previewShadow:#fce9db;
 
     --buttonColor:black;
+
+    --linkColor: #2698ff;
 }
 
 html, body{
@@ -36,7 +38,31 @@ p, li, span, label, input, textarea{
 
 a{
     text-decoration:none;
-    color:#2698ff;
+    color:var(--linkColor);
+    display: inline-block;
+}
+
+#resume{
+    position:relative;
+}
+
+#resume::before{
+    content:"";
+    position:absolute;
+    width:100%;
+    height:4px;
+    border-radius: 4px;
+    background-color:#18272F;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transform: transform .3s ease-in-out;
+}
+
+#resume:hover::before{
+    transform-origin: left;
+    transform: scaleX(1);
 }
 
 ul{
