--- a/weather/style.css
+++ b/weather/style.css
@@ -11,7 +11,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #1b9fdd;
+    background: #06283D;
 }
 
 .container{
@@ -22,7 +22,7 @@ body{
     padding: 28px 32px;
     overflow: hidden;
     border-radius: 18px;
-    font-family: 'Lato' sans-serif;
+    font-family: 'Roboto', sans-serif;
     transition: 0.6s ease-out;
 }
 
@@ -35,7 +35,7 @@ body{
 }
 
 .search-box input{
-    color: #1b3edd;
+    color: #06283D;
     width: 80%;
     font-size: 24px;
     font-weight: 500;
@@ -45,8 +45,8 @@ body{
 
 .search-box input::placeholder{
     font-size: 20px;
-    font-weight: 500px;
-    color: #1b3edd;
+    font-weight: 500;
+    color: #06283D;
     text-transform: capitalize;
 }
 
@@ -54,21 +54,21 @@ body{
     cursor: pointer;
     width: 50px;
     height: 50px;
-    color: #1b3edd;
+    color: #06283D;
     background: #dff6ff;
     border-radius: 50%;
     font-size: 22px;
-    transition: 0.4s ease-in;
+    transition: 0.4s ease;
 }
 
 .search-box button:hover{
     color: #fff;
-    background: #1b9fdd;
+    background: #06283D;
 }
 
 .search-box i{
     position: absolute;
-    color: #1b9fdd;
+    color: #06283D;
     font-size: 28px;
 }
 
@@ -83,7 +83,7 @@ body{
 
 .weather-box .temperature{
     position: relative;
-    color: #1b3edd;
+    color: #06283D;
     font-size: 4rem;
     font-weight: 800;
     margin-top: 30px;
@@ -92,12 +92,12 @@ body{
 
 .weather-box .temperature span{
     position: absolute;
-    margin-left: 4rem;
+    margin-left: 4px;
     font-size: 1.5rem;
 }
 
 .weather-box .description{
-    color: #1b3edd;
+    color: #06283D;
     font-size: 22px;
     font-weight: 500;
     text-transform: capitalize;
@@ -123,25 +123,25 @@ body{
 }
 
 .weather-details .wind{
-    padding-left: 20px;
+    padding-right: 20px;
     justify-content: flex-end;
 }
 
 .weather-details i{
-    color: #1b3edd;
+    color: #06283D;
     font-size: 26px;
-    margin-top: 6px;
     margin-right: 10px;
+    margin-top: 6px;
 }
 
 .weather-details span{
-    color: #1b3edd;
+    color: #06283D;
     font-size: 22px;
     font-weight: 500;
 }
 
 .weather-details p{
-    color: #1b3edd;
+    color: #06283D;
     font-size: 14px;
     font-weight: 500;
 }
@@ -160,15 +160,15 @@ body{
 }
 
 .not-found p{
-    color: #1b3edd;
+    color: #06283D;
     font-size: 22px;
     font-weight: 500;
     margin-top: 12px;
 }
 
 .weather-box, .weather-details{
-    opacity: 0;
     scale: 0;
+    opacity: 0;
 }
 
 .fadeIn{
@@ -177,8 +177,8 @@ body{
 }
 
 @keyframes fadeIn{
-     to{
+    to {
         scale: 1;
         opacity: 1;
-     }
+    }
 }
