--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,11 @@ h6{ font-size: 16px;}
     text-align:center;
 }
 
+.center_column{
+    display:grid;
+    justify-content:center;
+}
+
 .right_column{
     grid-area:right_column;
     display:grid;
