--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --borderColor:#c1c1c1;
 
     --mainText:black;
-    --secondaryText:#961c14;
+    --secondaryText:#520d06;
 
     --themeDotBorder:#24292e;
 
@@ -330,8 +330,8 @@ h6{ font-size: 16px;}
 }
 
 .post_wrapper{
-    display:grid;
-    grid-template-columns: repeat(auto-fit, 320px);
+    display:flex;
+    flex-wrap: wrap;
     gap:20px;
     justify-content:center;
     padding-bottom:50px;
@@ -355,6 +355,7 @@ h6{ font-size: 16px;}
 .preview{
     background-color: #fff;
     padding:0;
+    width: 800;
 }
 
 .post_title{
